RESOLVED FIXED288684
AX: With ENABLE(INCLUDE_IGNORED_IN_CORE_AX_TREE), getting the unignored children of a node-only object with aria-owns loops infinitely
https://bugs.webkit.org/show_bug.cgi?id=288684
Summary AX: With ENABLE(INCLUDE_IGNORED_IN_CORE_AX_TREE), getting the unignored child...
Tyler Wilcock
Reported 2025-02-26 20:49:16 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-26 20:49:26 PST
Tyler Wilcock
Comment 2 2025-02-26 20:56:27 PST
EWS
Comment 3 2025-02-27 12:05:55 PST
Committed 291241@main (d2c534bec164): <https://commits.webkit.org/291241@main> Reviewed commits have been landed. Closing PR #41486 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.